<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.login.LoginActivity"
    android:orientation="vertical"
    android:background="@color/background_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp" />

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/heading1"
        android:text="@string/heading_login"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle1"
        android:text="@string/subheading_login"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle2"
        android:text="@string/title_email"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/textInputLayout"
        android:theme="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:hint="@string/hint_email"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle2"
        android:text="@string/title_password"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/textInputLayout"
        android:theme="@style/textInputLayout"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/icon_password_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/subtitle1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_login"
        style="@style/button"
        android:text="@string/text_button_login"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"/>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_marginTop="32dp">

        <com.google.android.material.textview.MaterialTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register1"
            android:textSize="@dimen/subtitle1"
            android:textColor="@color/subtitle_color"
            android:includeFontPadding="false"
            android:fontFamily="@font/plusjakartasans_regular"/>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/go_to_register2"
            android:textSize="@dimen/subtitle1"
            android:textColor="@color/primary_color"
            android:includeFontPadding="false"
            android:fontFamily="@font/plusjakartasans_medium"
            android:layout_marginStart="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>