<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.register.RegisterActivity"
    android:orientation="vertical"
    android:background="@color/background_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginEnd="6dp"
                android:layout_gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/text_button"
                android:fontFamily="@font/plusjakartasans_medium"
                android:includeFontPadding="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </com.google.android.material.appbar.MaterialToolbar>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/heading1"
        android:text="@string/heading_register"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="16dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle1"
        android:text="@string/subheading_register"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle2"
        android:text="@string/title_username"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_name"
        style="@style/textInputLayout"
        android:theme="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_name"
            android:hint="@string/hint_username"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:includeFontPadding="false"
            android:textColor="@color/black"
            android:hint="test"
            android:textSize="@dimen/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle2"
        android:text="@string/title_email"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_email"
        style="@style/textInputLayout"
        android:theme="@style/textInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_email"
            android:hint="@string/hint_email"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/subtitle1"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textview.MaterialTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/subtitle2"
        android:text="@string/title_password"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="8dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_password"
        style="@style/textInputLayout"
        android:theme="@style/textInputLayout"
        app:endIconMode="password_toggle"
        app:endIconTint="@color/icon_password_color"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_password"
            android:hint="@string/hint_password"
            android:textColorHint="@color/hint_text_color"
            android:textColor="@color/white"
            android:includeFontPadding="false"
            android:textSize="@dimen/subtitle1"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="56dp" />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_register"
        style="@style/button"
        android:text="@string/text_button_Register"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginHorizontal="16dp"
        android:layout_marginTop="48dp"/>

</androidx.appcompat.widget.LinearLayoutCompat>