<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".presentation.main.profile.ProfileFragment"
    android:orientation="vertical"
    android:background="@color/background_color">

    <com.google.android.material.appbar.MaterialToolbar
        android:layout_width="match_parent"
        android:layout_height="56dp">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_back"
                android:layout_marginEnd="6dp"
                android:layout_gravity="center_vertical"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:textColor="@color/heading_color"
                android:textSize="@dimen/text_button"
                android:fontFamily="@font/plusjakartasans_medium"
                android:includeFontPadding="false"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/btn_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/subtitle4"
            android:text="@string/logout"
            android:includeFontPadding="false"
            android:layout_marginEnd="16dp"
            android:layout_gravity="end"/>

    </com.google.android.material.appbar.MaterialToolbar>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.makeramen.roundedimageview.RoundedImageView
                android:id="@+id/iv_user"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="48dp"
                android:scaleType="centerCrop"
                app:riv_corner_radius="90dp"
                android:padding="6dp"
                android:src="@drawable/image_placeholder"
                android:background="@drawable/bg_stroke_profile"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:id="@+id/tv_changeProfilePicture"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/plusjakartasans_medium"
                android:text="@string/change_profile_picture"
                android:textColor="#0090F8"
                android:textSize="14sp"
                android:layout_marginTop="8dp"
                android:includeFontPadding="false"
                android:layout_gravity="center_horizontal"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:text="@string/title_username"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_name"
                style="@style/textInputLayout"
                android:theme="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_name"
                    android:hint="@string/hint_username"
                    android:textColorHint="@color/hint_text_color"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:text="@string/phone_number"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_phoneNumber"
                style="@style/textInputLayout"
                android:theme="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_phoneNumber"
                    android:hint="@string/phone_number"
                    android:textColorHint="@color/hint_text_color"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:text="@string/city"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_city"
                style="@style/textInputLayout"
                android:theme="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_city"
                    android:hint="@string/hint_city"
                    android:textColorHint="@color/hint_text_color"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/subtitle2"
                android:text="@string/address"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="8dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/til_address"
                style="@style/textInputLayout"
                android:theme="@style/textInputLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="12dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_subHeader">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_addresss"
                    android:hint="@string/hint_address"
                    android:textColorHint="@color/hint_text_color"
                    android:textColor="@color/white"
                    android:includeFontPadding="false"
                    android:textSize="@dimen/subtitle1"
                    android:layout_width="match_parent"
                    android:layout_height="56dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_update"
                style="@style/button"
                android:text="@string/update"
                android:layout_width="match_parent"
                android:layout_height="56dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="24dp"
                android:layout_marginBottom="32dp"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>

</androidx.appcompat.widget.LinearLayoutCompat>